[package]
name = "loadants"
version = "0.1.0"
edition = "2021"
description = "An lightweight DNS forwarder converting UDP/TCP queries to DoH, written in Rust."
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[[bin]]
name = "loadants"
path = "src/main.rs"

[dependencies]
# DNS 服务器
hickory-server = { version = "0.24", features = ["hickory-resolver"] }
hickory-proto = "0.24"

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] } # 用于 DoH 请求
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-lb = "0.3"

# 配置
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }

# 缓存
moka = { version = "0.12", features = ["future"] }

# 异步
tokio = { version = "1.35", features = ["full"] }
tokio-graceful-shutdown = "0.15"
tokio-util = { version = "0.7", features = ["io"] }

# SSL
native-tls = "0.2"
[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
[target.'cfg(windows)'.dependencies]
openssl-sys = "0.9"

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

# 实用工具
mimalloc = { version = "0.1", default-features = false }
regex = { version = "1.10", features = ["unicode"] }
async-trait = "0.1"
base64 = "0.21"
chrono = "0.4"
rand = "0.8"
once_cell = "1.19"
dashmap = "5.5"

# 健康检查和指标
axum = "0.7"
hyper = "1.0"
prometheus = "0.13"

# URL
url = "2.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_matches = "1.5" 